unpackaged/main/default/objects/Inventory__c/fields/Forecast_Qty__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Qty__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>The forecasted number of units sales reps who&#39;s primary location is your warehouse</inlineHelpText>
    <label>Rep Forecast Qty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>