unpackaged/main/default/objects/Inventory__c/fields/Inventory_ID__c.field-meta.xml
<CustomField>
    <fullName>Inventory_ID__c</fullName>
    <description>Will be used as the external identifier (required for SmartConnect integration) and will be the product number + &quot;-&quot; + site/location number</description>
    <externalId>true</externalId>
    <label>Inventory ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>