unpackaged/main/default/objects/Inventory__c/fields/Inventory_Product__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Product__c</fullName>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Inventories</relationshipLabel>
    <relationshipName>Inventories</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>