unpackaged/main/default/objects/Inventory__c/fields/Inventory_Product_number__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Product_number__c</fullName>
    <formula>Inventory_Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product #</label>
    <type>Text</type>
</CustomField>