unpackaged/main/default/objects/Inventory__c/fields/Inventory_Site__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Site__c</fullName>
    <label>Site</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Location__c.Holds_Inventory__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Inventories</relationshipLabel>
    <relationshipName>Inventories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>