unpackaged/main/default/objects/Inventory__c/fields/Last_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Received_Date__c</fullName>
    <inlineHelpText>The last date inventory was received on a Purchase Order for this Item and Location</inlineHelpText>
    <label>Last Received Date</label>
    <type>Date</type>
</CustomField>