unpackaged/main/default/objects/Inventory__c/fields/Last_Received_Qty__c.field-meta.xml
<CustomField>
    <fullName>Last_Received_Qty__c</fullName>
    <inlineHelpText>The last quantity received on a Purchase Order for this Item and Location</inlineHelpText>
    <label>Last Received Qty</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>