unpackaged/main/default/objects/Inventory__c/fields/My_Location__c.field-meta.xml
<CustomField>
    <fullName>My_Location__c</fullName>
    <description>To indicate if the current users location matches the this site. We can then use this boolean in reports or list views</description>
    <formula>IF(  Site_Num__c  ==  $User.My_Location__c , True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Location</label>
    <type>Checkbox</type>
</CustomField>