unpackaged/main/default/objects/Inventory__c/fields/Open_Order__c.field-meta.xml
<CustomField>
    <fullName>Open_Order__c</fullName>
    <label>Open Order #</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>