unpackaged/main/default/objects/Inventory__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <formula>Inventory_Product__r.Product_Name__c</formula>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>