unpackaged/main/default/objects/Inventory__c/fields/Qty_Allocated__c.field-meta.xml
<CustomField>
    <fullName>Qty_Allocated__c</fullName>
    <description>The Qty Allocated for Use (in ERP)</description>
    <label>Qty Allocated</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>