unpackaged/main/default/objects/Inventory__c/fields/Qty_Available__c.field-meta.xml
<CustomField>
    <fullName>Qty_Available__c</fullName>
    <description>Qty On Hand - Qty Allocated</description>
    <formula>Qty_On_Hand__c -  Qty_Allocated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Qty Available</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>