unpackaged/main/default/objects/Inventory__c/fields/Qty_Backordered__c.field-meta.xml
<CustomField>
    <fullName>Qty_Backordered__c</fullName>
    <description>Quantity Backordered in GP/SalesPad</description>
    <inlineHelpText>Quantity Backordered in GP/SalesPad</inlineHelpText>
    <label>Qty B/O</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>