unpackaged/main/default/objects/Inventory__c/fields/Qty_Drop_Shipped__c.field-meta.xml
<CustomField>
    <fullName>Qty_Drop_Shipped__c</fullName>
    <label>Qty Drop Shipped</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>