unpackaged/main/default/objects/Inventory__c/fields/Qty_On_Hand__c.field-meta.xml
<CustomField>
    <fullName>Qty_On_Hand__c</fullName>
    <description>Quantity on Hand for this Site and this Product</description>
    <label>Qty On Hand</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>