unpackaged/main/default/objects/Inventory__c/fields/Qty_On_Order__c.field-meta.xml
<CustomField>
    <fullName>Qty_On_Order__c</fullName>
    <label>Qty On Order</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>