unpackaged/main/default/objects/Inventory__c/fields/Site_Num__c.field-meta.xml
<CustomField>
    <fullName>Site_Num__c</fullName>
    <formula>Inventory_Site__r.Location_Number__c</formula>
    <label>Site #</label>
    <type>Text</type>
</CustomField>