unpackaged/main/default/objects/Inventory__c/fields/Site_Region__c.field-meta.xml
<CustomField>
    <fullName>Site_Region__c</fullName>
    <formula>Text( Inventory_Site__r.Region__c)</formula>
    <label>Site Region</label>
    <type>Text</type>
</CustomField>