unpackaged/main/default/objects/Inventory__c/fields/Site_Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Site_Sales_Manager__c</fullName>
    <formula>IF(Inventory_Site__r.Personal_Stock__c,  Inventory_Site__r.Sales_Rep__r.Manager_Name__c , &#39;&#39;)</formula>
    <label>Site Sales Manager</label>
    <type>Text</type>
</CustomField>