unpackaged/main/default/objects/Inventory__c/fields/Site_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Site_Sales_Rep__c</fullName>
    <formula>IF(Inventory_Site__r.Personal_Stock__c,  Inventory_Site__r.Sales_Rep__r.Name, &#39;&#39;)</formula>
    <label>Site Sales Rep</label>
    <type>Text</type>
</CustomField>