unpackaged/main/default/objects/Inventory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Inventory_Product__c</columns>
    <columns>NAME</columns>
    <columns>Inventory_Site__c</columns>
    <columns>Qty_On_Hand__c</columns>
    <columns>Qty_Allocated__c</columns>
    <columns>Qty_Available__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Qty_On_Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <group>ATS_Sports_Turf_HQ</group>
        <group>Collections</group>
        <group>Counter_Sales</group>
        <group>Facility_Managers</group>
        <group>Sales_Reps</group>
        <role>HR_Manager</role>
        <role>Marketing_Manager</role>
        <role>Operations_Manager</role>
        <role>Sales_Manager</role>
    </sharedTo>
</ListView>