unpackaged/main/default/objects/Inventory__c/listViews/My_Warehouse_Inventory.listView-meta.xml
<ListView>
    <fullName>My_Warehouse_Inventory</fullName>
    <columns>Inventory_Product__c</columns>
    <columns>Product_Name__c</columns>
    <columns>Qty_On_Hand__c</columns>
    <columns>Qty_Allocated__c</columns>
    <columns>Qty_Available__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Qty_Available__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>My_Location__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Product_Name__c</field>
        <operation>contains</operation>
    </filters>
    <filters>
        <field>Inventory_Product_number__c</field>
        <operation>contains</operation>
    </filters>
    <label>Master - My Warehouse Inventory</label>
    <sharedTo>
        <group>IT_Department</group>
    </sharedTo>
</ListView>